--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <link rel="shortcut icon" href="assets/icons/favicon.ico">
+  <title>Badger</title>
 </head>
 
 <body>
   <div id="app"></div>
+  <script type="module" src="main.ts"></script>
 </body>
 
 </html>
